--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.1",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
