--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.1",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "@hookform/resolvers": "^2.9.11",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
